--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   user-select: none;
  }
  body{
-   background-image: url('./bg.jpg')
+   background-image: url('./bg.jpg');
    height: 100%; 
    width: 100%;
  }
